WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55672
All inspector tests time out or crash on Windows 7 Release (WebKit2 Tests)
https://bugs.webkit.org/show_bug.cgi?id=55672
Summary
All inspector tests time out or crash on Windows 7 Release (WebKit2 Tests)
Adam Roben (:aroben)
Reported
2011-03-03 07:19:49 PST
All inspector tests time out on Windows 7 Release (WebKit2 Tests). See the URL for an example.
Attachments
Make Inspector tests work in WebKit2 on Windows
(10.11 KB, patch)
2011-03-03 08:10 PST
,
Adam Roben (:aroben)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-03-03 07:38:15 PST
Looks like CFBundleGetBundleWithIdentifier(CFSTR("com.apple.WebKit")) is returning null. This probably explains the http/tests/inspector crashes, too.
Adam Roben (:aroben)
Comment 2
2011-03-03 07:42:56 PST
...and we're not enabling the Inspector at all on the inspector/ tests because we're not allowing a backslash in the path.
Adam Roben (:aroben)
Comment 3
2011-03-03 08:01:34 PST
<
rdar://problem/9080867
>
Adam Roben (:aroben)
Comment 4
2011-03-03 08:10:21 PST
Created
attachment 84565
[details]
Make Inspector tests work in WebKit2 on Windows
Adam Roben (:aroben)
Comment 5
2011-03-03 08:22:05 PST
Committed
r80240
: <
http://trac.webkit.org/changeset/80240
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug