Make Inspector tests work in WebKit2 on Windows

Fixes <http://webkit.org/b/55672> <rdar://problem/9080867> All inspector tests time out or crash on
Windows 7 Release (WebKit2 Tests)

Reviewed by Darin Adler.

Source/WebKit2:

Create the CFBundleRef for WebKit.dll on Windows if needed

* Shared/win/WebKitBundle.cpp: Added.
(WebKit::createWebKitBundle): Returns a pre-existing bundle, if possible, otherwise creates
and returns a new bundle.
(WebKit::webKitBundle): Creates and caches a bundle, and returns it.

* Shared/win/WebKitBundle.h: Added.

* UIProcess/win/WebInspectorProxyWin.cpp:
(WebKit::WebInspectorProxy::inspectorPageURL):
* WebProcess/WebPage/win/WebInspectorWin.cpp:
(WebKit::WebInspector::localizedStringsURL):
Changed to use webKitBundle() to ensure that the bundle has been created.

* win/WebKit2.vcproj: Added new files.

Tools:

Look for Windows-style paths when checking whether a test is an Inspector test

* WebKitTestRunner/TestInvocation.cpp:
(WTR::shouldOpenWebInspector): Also look for backslashes, since that's what we'll get on
Windows.

Canonical link: https://commits.webkit.org/70135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80240 268f45cc-cd09-0410-ab3c-d52691b4dbfc